--- a/MeetupApp.API/appsettings.json
+++ b/MeetupApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token":"super super long token key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
