--- a/MeetupApp-SPA/angular.json
+++ b/MeetupApp-SPA/angular.json
@@ -23,11 +23,12 @@
               "src/assets"
             ],
             "styles": [
+              
               "src/styles.css"
 
 
             ],
-            "scripts": [],
+            "scripts": ["node_modules/alertifyjs/build/alertify.min.js"],
             "es5BrowserSupport": true
           },
           "configurations": {
