--- a/MeetupApp.API/appsettings.json
+++ b/MeetupApp.API/appsettings.json
@@ -7,5 +7,17 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  
+  "AllowedHosts": "*",
+
+  
+    "ConnectionStrings": {
+        "DefaultConnection": "Server =(localdb)\\mssqllocaldb;Database=Videos;Trusted_Connection=True;MultipleActiveResultSets=true"
+    }
+
+  
+
+  
 }
+
+
